--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -26,8 +26,8 @@
     --color-surface: var(--surface);
     --color-surface-foreground: var(--surface-foreground);
 
-    --color-primary: var(--color-foreground);
-    --color-primary-foreground: var(--color-background);
+    --color-primary: var(--primary);
+    --color-primary-foreground: var(--primary-foreground);
 
     --color-nepal-50: oklch(0.977 0.005 228.817);
     --color-nepal-100: oklch(0.943 0.009 242.841);
@@ -56,6 +56,9 @@
     --ring: oklch(0.708 0 0);
     --surface: oklch(0.98 0 0);
     --surface-foreground: var(--foreground);
+
+    --primary: oklch(0.205 0 0);
+    --primary-foreground: oklch(0.985 0 0);
 }
 
 .dark {
@@ -72,6 +75,9 @@
     --ring: oklch(0.556 0 0);
     --surface: oklch(0.2 0 0);
     --surface-foreground: oklch(0.708 0 0);
+
+    --primary: oklch(0.922 0 0);
+    --primary-foreground: oklch(0.205 0 0);
 }
 
 @layer base {
