--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -99,6 +99,33 @@
     button:active {
         @apply opacity-60 md:opacity-100;
     }
+
+    ::-webkit-scrollbar {
+        width: 5px;
+        height: 10px;
+        border-radius: 10px;
+        @apply bg-transparent;
+    }
+    ::-webkit-scrollbar-thumb {
+        @apply bg-zinc-400;
+        border-radius: 10px;
+    }
+    ::-webkit-scrollbar-corner {
+        @apply bg-neutral-200;
+    }
+
+    .dark {
+        ::-webkit-scrollbar {
+            @apply bg-transparent;
+        }
+        ::-webkit-scrollbar-thumb {
+            @apply bg-neutral-500;
+        }
+
+        ::-webkit-scrollbar-corner {
+            @apply bg-neutral-900;
+        }
+    }
 }
 
 @utility no-scrollbar {
@@ -125,4 +152,7 @@
     .dark {
         --background: lab(2.75381% 0 0);
     }
+}
+
+@layer base {
 }
